--- a/binary_tree/description
+++ b/binary_tree/description
@@ -1,1 +1,4 @@
-
+Дерево создается случайно из букв A..Z, реализовал через однонаправленный список. 
+Решение задачи представил методом поиска в глубину (DFS): ищется два пути к точке с корня, 
+потом строится путь между точками, удаляется общее начало и переворачивает оставшуюся часть первого пути). 
+Узлы, между которыми необходимо найти путь, задаются большими буквами латинского алфавита.
