--- a/eulerian_path/description
+++ b/eulerian_path/description
@@ -1,6 +1,4 @@
-Choose any starting vertex v, and follow a trail of edges from that vertex until returning to v. It is not possible to get stuck at any vertex other than v, because the even degree of all vertices ensures that, when the trail enters another vertex w there must be an unused edge leaving w. The tour formed in this way is a closed tour, but may not cover all the vertices and edges of the initial graph.
-As long as there exists a vertex u that belongs to the current tour but that has adjacent edges not part of the tour, start another trail from u, following unused edges until returning to u, and join the tour formed in this way to the previous tour.
-Since we assume the original graph is connected, repeating the previous step will exhaust all edges of the graph.
-By using a data structure such as a doubly linked list to maintain the set of unused edges incident to each vertex, to maintain the list of vertices on the current tour that have unused edges, and to maintain the tour itself, the individual operations of the algorithm (finding unused edges exiting each vertex, finding a new starting vertex for a tour, and connecting two tours that share a vertex) may be performed in constant time each, so the overall algorithm takes linear time, {\displaystyle O(|E|)}O(|E|).[8]
-
-This algorithm may also be implemented with a queue. Because it is only possible to get stuck when the queue represents a closed tour, one should rotate the queue (remove an element from the head and add it to the tail) until unstuck, and continue until all edges are accounted for. This also takes linear time, as the number of rotations performed is never larger than {\displaystyle |E|}|E|.
+Эйлеров путь в графе существует тогда и только тогда, когда граф связный и содержит не более двух вершин нечётной степени. 
+Ввиду леммы о рукопожатиях, число вершин с нечётной степенью должно быть четным. 
+А значит эйлеров путь существует только тогда, когда это число равно нулю или двум. 
+Причём когда оно равно нулю, эйлеров путь вырождается в эйлеров цикл.
