--- a/Ford–Fulkerson-algorithm/description
+++ b/Ford–Fulkerson-algorithm/description
@@ -1,1 +1,8 @@
+1.	Обнуляем все потоки. Остаточная сеть изначально совпадает с исходной сетью.
+2.	В остаточной сети находим любой путь из источника в сток. Если такого пути нет, останавливаемся.
+3.	Пускаем через найденный путь (он называется увеличивающим путём или увеличивающей цепью) максимально возможный поток:
+    a.	На найденном пути в остаточной сети ищем ребро с минимальной пропускной способностью сmin
+    b.	Для каждого ребра на найденном пути увеличиваем поток на сmin, а в противоположном ему — уменьшаем на сmin.
+    c.	Модифицируем остаточную сеть. Для всех рёбер на найденном пути, а также для противоположных им рёбер, вычисляем новую пропускную способность. Если она стала ненулевой, добавляем ребро к остаточной сети, а если обнулилась, стираем его.
+4.	Возвращаемся на шаг 2.
 
